feat: 添加数据库视图创建功能及相关测试